@@ -1,6 +1,8 @@
 Revision history for Bot::IRC::X::Reminder
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
         - Update Travis YAML
 
 1.04      2019-08-26 16:42:41-07:00 America/Los_Angeles
